Fixed fluid_walking ability